config/envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
static_resources:
#
#  rate_limit_service:
#    grpc_service:
#      envoy_grpc:
#        cluster_name: my_rate_limit_service
#      timeout: 0.25s

  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  host_rewrite: www.google.com
                  cluster: service_google
#            rate_limit: ["base_limiting"]
          http_filters:
          - name: envoy.filters.http.router
  clusters:
#  - name: my_rate_limit_service
#    connect_timeout: 0.25s
#    dns_lookup_family: V4_ONLY
#    lb_policy: ROUND_ROBIN
#    load_assignment:
#      cluster_name: my_rate_limit_service
#      endpoints:
#      - lb_endpoints:
#        - endpoint:
#            address:
#              socket_address:
#                address: rate_limit
#                port_value: 8080 # Define me

  - name: service_google
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    # Smth custom.
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service_google
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: www.google.com
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.api.v2.auth.UpstreamTlsContext
        sni: www.google.com
